# pausiva-core

./: .gitignore  BUSINESS.md  README.md  docker-compose.local.yml  docker-compose.prod.yml  requirements.txt
ai-multiagent/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  langgraph.json  main.py  pyproject.toml
ai-multiagent/app/: __init__.py  api.py  init_schema.sql  lifespan.py  main.py
ai-multiagent/app/chat/: __init__.py  dependencies.py  orchestrator.py  router.py  schemas.py  service.py
ai-multiagent/app/chat/agents/: __init__.py  appointments.py  checkin.py  medication.py  triage.py
ai-multiagent/app/chat/core/: __init__.py  prompts.py  schemas.py  types.py
ai-multiagent/app/chat_v2/: __init__.py  agent.py  dependencies.py  prompts.py  router.py  schemas.py  service.py
ai-multiagent/app/chat_v2/tools/: __init__.py  appointments.py  followings.py  medication.py  patient.py  triage.py
ai-multiagent/app/health/: __init__.py  router.py
ai-multiagent/app/models/: __init__.py  appointment.py  base.py  medication.py  message.py  patient.py  response.py
ai-multiagent/app/shared/config/: __init__.py  settings.py
ai-multiagent/app/shared/database/: __init__.py  client.py  repositories.py
ai-multiagent/app/shared/llm/: __init__.py  clients.py
ai-multiagent/sql/: init_schema.sql
dashboard/: DATABASE_SCHEMA_SUPABASE.md  package-lock.json  package.json
docs/: openapi.yaml
front/: .env.example  middleware.ts  next.config.ts  package-lock.json  package.json
(+171 files in other folders)
